Final fixes Override default mailchimp styles. Link bio page and all navbar links within it. Fix minor design issues on mobile display

--- a/styles.css
+++ b/styles.css
@@ -84,8 +84,10 @@ a:hover {
     border: 0;
     transition: color 200ms ease-out, 
     background-color 700ms ease-out;
-    box-shadow:  3px 3px 15px -5px #20333d,
-             -3px -3px 15px -5px #f7f1de;
+    box-shadow:  
+    3px 3px 15px -5px #20333d,
+    -3px -3px 15px -5px #f7f1de;
+    border-radius: 3px;
 }
 
 .bio__cta:hover, .video__cta:hover {
@@ -95,20 +97,28 @@ a:hover {
     /*transform: scale(1.1, 1.1);*/
 }
 
-.contact__cta.button {
+#mc-embedded-subscribe.contact__cta.button {
+    height: unset;
+    clear: unset;
     font-size: 1.4rem;
     cursor: pointer;
     padding: 0.2rem 5rem;
-    margin: 0 0 2rem 0;
+    margin: 0;
     background-color: #87A4B2;
     color: #233842;
     box-shadow:  3px 3px 15px -5px #20333d,
              -3px -3px 15px -5px #414d53;
     transition: background-color 400ms ease-out, 
     box-shadow 400ms ease-out;
+    
 }
 
-.contact__cta.button:hover {
+#mc_embed_signup div.clear {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#mc-embedded-subscribe.contact__cta.button:hover {
     opacity: 1;
     background-color: #233842;
     color: #FEFBF1;
@@ -418,7 +428,6 @@ transition: transform 400ms ease-in-out;
     height: 100%;
 }
 
-
 .video-grid {
     width: 80%;
     display: grid;
@@ -453,6 +462,10 @@ transition: transform 400ms ease-in-out;
     font-family:'lato', sans-serif;
 }
 
+.contact-details h2 {
+    text-align: center;
+}
+
 /* MailChimp sign-up form */
 
 #mc_embed_signup {
@@ -463,15 +476,26 @@ transition: transform 400ms ease-in-out;
     border-bottom: 1px solid #87A4B2;
 }
 
-#mc_embed_signup_scroll {
+#mc_embed_signup form.validate {
+    position: unset;
+    padding: 0;
+
+}
+
+
+div#mc_embed_signup_scroll {
     display: flex;
     flex-direction: column;
 }
 
-.mc-field-group {
+#mc_embed_signup_scroll div.mc-field-group {
     display: flex;
     justify-content: space-evenly;
     padding: 0.5rem 0;
+    clear: unset;
+    position: unset;
+    width: unset;
+    min-height: unset;
 
 }
 .mc-field-group label {
@@ -531,7 +555,7 @@ transition: transform 400ms ease-in-out;
         justify-content: center;
         align-items: center;
         height: auto;
-        padding-bottom: 2rem;
+        padding-bottom: 1rem;
         width: 100%;
     }
 
@@ -638,6 +662,18 @@ transition: transform 400ms ease-in-out;
         text-align: center;
         width: 100%;
     }
+
+    /* Bio page */
+
+    .bio-page .img-container {
+        display: none;
+    }
+
+    .flex-right {
+        box-shadow: none;
+        margin-bottom: 0;
+        padding-bottom: 1rem;
+    }
 }
 
 /* break point for artwork grid */
@@ -667,14 +703,27 @@ transition: transform 400ms ease-in-out;
         transition: none;
     }
 
+    /* bio page */
+
+    .quote-section {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
 
 }
 
 /* break point for MailChimp form width */
 @media only screen and (max-width:620px) {
-#mc_embed_signup {
-    width: initial;
-    }
+    #mc_embed_signup {
+    width: 80%;
+}
+
+    #mc-embedded-subscribe.contact__cta.button {
+        justify-self: center;
+        width: 100%;
+        padding: 0;
+}
 }
 
 /* break point for navbar links on mobile screens */
